.k8s/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: local
spec:
  rules:
    - host: fastapiapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-app
                port:
                  number: 8000
    - host: flower.fastapiapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: celery-flower
                port:
                  number: 5555
